--- a/app/build.gradle
+++ b/app/build.gradle
@@ -49,20 +49,12 @@ dependencies {
     //avoscloud-sdk 为 LeanCloud基础包
     compile 'cn.leancloud.android:avoscloud-sdk:v3.+'
     //avoscloud-push 为推送与实时聊天需要的包
-    //    compile('cn.leancloud.android:avoscloud-push:v3.+@aar') { transitive = true }
+    compile('cn.leancloud.android:avoscloud-push:v3.+@aar') { transitive = true }
     compile files('libs/BaiduLBS_Android.jar')
     compile files('libs/xUtils-2.6.14.jar')
     compile files('libs/universal-image-loader-1.9.2-SNAPSHOT-with-sources.jar')
-    compile files('libs/avoscloud-sdk-v3.13.10.jar')
-    compile files('libs/fastjson.jar')
-    compile files('libs/httpmime-4.2.4.jar')
-    compile files('libs/okhttp-2.6.0-leancloud.jar')
-    compile files('libs/okio-1.6.0-leancloud.jar')
     compile files('libs/zxing.jar')
     compile files('libs/library-1.2.2.jar')
-    compile files('libs/avoscloud-push-v3.13.10.jar')
-    compile files('libs/Java-WebSocket-1.3.1-leancloud.jar')
-    compile files('libs/protobuf-java-2.6.1.jar')
     compile files('libs/IndoorscapeAlbumPlugin.jar')
     compile files('libs/alipaySdk-20160223.jar')
     compile files('libs/GifView.jar')
